test/kobra-code/syntax-errors/dangling-dot-dot-declaration.ks
$  a = 1
.. b = 2
.. c = anon(a,b):
  return a + b
end ..